--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ sidebar-avatar: /img/head.jpg      # 头像
 
 # SNS settings | 社交网络设置
 facebook_username: rainbom.z
-github_username: RainbomSea
-zhihu_username: RainbomSea
-csdn_username: qq_39268193
+github_username: BuleSky233
+zhihu_username: 豌豆射手
+csdn_username: qq_43209705
 
 
 
@@ -73,7 +73,7 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: 9acee03023ad0c6c993dd86df81e2ac8
+#ba_track_id: 9acee03023ad0c6c993dd86df81e2ac8
 
 
 # Featured Tags
