--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: /img/head.jpg      # 头像
 
 
 # SNS settings | 社交网络设置
-facebook_username: rainbom.z
+facebook_username: lzy.z
 github_username: BuleSky233
 zhihu_username: 豌豆射手
 csdn_username: qq_43209705
